kubernetes/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: api
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      service: api
  template:
    metadata:
      labels:
        service: api
    spec:
      containers:
        - image: mikelpe/as-entrega-api:latest
          name: api
