kubernetes/flask-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-webapp
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: webapp
        image: mikelpe/as-entrega-flask:latest
        ports:
        - containerPort: 5000
