kubernetes/imagen-propia-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: app
  template:
    metadata:
      labels:
        component: app
    spec:
      containers:
      - name: mi-pod-imagen
        image: mikelpe/as-entrega-docker-imagen:kubeprueba
        ports:
        - containerPort: 5000
