kubernetes/imagen-propia-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  selector:
    component: web
  ports:
  - port: 8080
    targetPort: 8080
