kubernetes/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  type: ClusterIP
  selector:
    component: db
  ports:
  - port: 27017
    targetPort: 27017
