kubernetes/nginx-service.yaml
# nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: ClusterIP
  selector:
    component: webnginx
  ports:
  - port: 80
    targetPort: 80
